# thales-cdsp-csm-mcp-server

./: README.md  activate_env.bat  activate_env.ps1  env.example  main.py  mcp-config-uv.json  mcp-config-venv-unix.json  mcp-config.json  pyproject.toml  requirements.txt  start_server.bat  start_server.ps1
config/: mcp-config-uv.json  mcp-config-venv-unix.json  mcp-config-venv.json  mcp-config.json
docs/: README.md  TESTING.md  TOOLS.md  TRANSPORT_MODES.md
src/thales_cdsp_csm_mcp_server/: __init__.py  client.py  server.py
src/thales_cdsp_csm_mcp_server/core/: __init__.py  client.py  logging_config.py
src/thales_cdsp_csm_mcp_server/server/: mcp_server.py  prompts.py
src/thales_cdsp_csm_mcp_server/tools/: __init__.py  base.py  base_tools.py  secret_tools.py
src/thales_cdsp_csm_mcp_server/tools/administration/: manage_account.py
src/thales_cdsp_csm_mcp_server/tools/api_reference/: get_api_reference.py
src/thales_cdsp_csm_mcp_server/tools/auth/: __init__.py  manage_auth.py
src/thales_cdsp_csm_mcp_server/tools/auth_methods/: auth_methods_manager.py  aws_iam_auth_method.py  manage_auth_methods.py
src/thales_cdsp_csm_mcp_server/tools/customer_fragments/: manage_customer_fragments.py
src/thales_cdsp_csm_mcp_server/tools/dfc_keys/: manage_dfc_keys.py
src/thales_cdsp_csm_mcp_server/tools/guidelines/: security_guidelines.py
src/thales_cdsp_csm_mcp_server/tools/monitoring/: manage_analytics.py
src/thales_cdsp_csm_mcp_server/tools/roles/: manage_roles.py
tests/: example_usage.py  run_tests.py  test_mcp_protocol.py  test_server.py
(+3 files in other folders)
